--- a/index.html
+++ b/index.html
@@ -6,12 +6,26 @@
     <title>practice</title>
     <style>
         h1 {
-            color: darkgreen;
-            background-color:#dc143c ;
+            color: red;
+            background-color:yellow ;
+            border: 5px dotted gray;
+        }
+        p {
+            background-color:yellow;
+            width:50%;
+            height: 400px;
+            font-size:20px;
+            line-height: 60px;
+            border-top: 10px dotted gray;
+            padding:10px;
+            margin: 30px auto;
         }
     </style>
 </head>
 <body>
-  <h1>トマト</h1>  
+  <h1>thank you</h1> 
+  <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat eveniet qui, perspiciatis nemo soluta, temporibus, doloremque quae facere et labore ad iusto laudantium officia quisquam maxime praesentium cum! Ipsam, ullam!
+  <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat eveniet qui, perspiciatis nemo soluta, temporibus, doloremque quae facere et labore ad iusto laudantium officia quisquam maxime praesentium cum! Ipsam, ullam!
+</p> 
 </body>
 </html>
